# HessianExperiment

./: CMakeLists.txt  CMakePresets.json  Readme.md  vcpkg.json
gdb/: eigen.py  ipopt.py
include/: GoldsteinPrice.hpp  nlp.hpp
ipopt/: CMakeLists.txt
ipopt/include/: nlp.hpp
ipopt/src/: main.cpp  nlp.cpp
matlab/: TestModelCore.m  TestModelHarness.m  digestCppRun.m  runscript.m
src/: main.cpp  nlp.cpp
uno/: CMakeLists.txt
uno/include/: uno_model.hpp
uno/src/: main_uno.cpp
